--- a/src/styles/components/filter.scss
+++ b/src/styles/components/filter.scss
@@ -565,3 +565,56 @@ input.chk-btn:checked + label {
 .activity-list form {
     position: relative;
 }
+
+#ck-button {
+	list-style-type: none;
+	margin: 20px 0;
+	padding: 0;
+}
+
+#ck-button li {
+	font-weight: bold;
+	text-transform: uppercase;
+	font-family: $family-sanserif;
+	&:hover {
+		cursor: pointer;
+	}
+	& input + span {
+		margin: 0px 10px 10px 0;
+    	overflow:auto;
+    	float:left;
+		background-color: rgba(30,177,242, .3);
+		color: rgba(250,250,250, 1);
+		border-radius: 18px;
+		padding: 8px 12px;
+		border: 1px solid rgba(30,177,242, 1);
+		&:not(:checked) {
+			// background-color: rgba(30,177,242, 1);
+			background: rgba(255,255,255, 0);
+			border: 1px solid rgba(30,177,242, 0.7);
+			color: rgba(30,177,242, 0.7);
+		}
+		&:hover, &:active {
+			background-color: rgba(30,177,242, 1);
+			color: rgba(250,250,250, 1);
+			cursor: pointer;
+		}
+	}
+	& input:checked + span {
+    	background-color: rgba(30,177,242, 1);
+    	color: rgba(250,250,250, 1);
+	}
+}
+
+#ck-button {
+	@media #{$small-and-down} {
+		li {
+			display: inline-block;
+		}
+		span {
+			float: none !important;
+			display: inline-block;
+			font-size: 12px;
+		}
+	}
+}
