--- a/src/styles/components/filter.scss
+++ b/src/styles/components/filter.scss
@@ -17,7 +17,7 @@
     float: left;
     ul {
       list-style-type: none; 
-      margin: 1.2em; 
+      margin: 17px 1.2em; 
       padding: 0; 
       overflow: hidden;
       li {
@@ -617,4 +617,40 @@ input.chk-btn:checked + label {
 			font-size: 12px;
 		}
 	}
+}
+
+.filter .map-type {
+    list-style-type: none; 
+    @media #{$small-and-down} {
+        position: absolute;
+        top: 0px;
+        right: 30px;
+        li {
+        display:inline-block;
+        padding-left: 10px;
+        }
+    }
+    @media #{$medium-and-up} {
+        float: right;
+        li {
+        float:left; 
+        margin-right: 2em;
+        margin-top: 12px;
+        }
+    }
+}
+
+#filter-dropdown {
+    border-bottom: 1px solid $white;
+    &:hover {
+        cursor: pointer;
+    }
+}
+
+.filter-bar {
+    p {
+        color: $white;
+        text-transform: none;
+        margin: 0;
+    }
 }
