Updates sections and styles

--- a/src/styles/components/filter.scss
+++ b/src/styles/components/filter.scss
@@ -648,6 +648,7 @@ input.chk-btn:checked + label {
 }
 
 .filter-bar {
+    font-family: $family-sanserif;
     p {
         color: $white;
         text-transform: none;
