--- a/src/styles/components/map.scss
+++ b/src/styles/components/map.scss
@@ -36,7 +36,7 @@
     transition: all 0.5s ease;
 	width: 100%;
     min-height: 80vh;
-    margin-bottom: 50px;
+    // margin-bottom: 50px;
     display: inline-block;
 }
 
