--- a/src/styles/components/filter.scss
+++ b/src/styles/components/filter.scss
@@ -239,7 +239,7 @@
             // margin-bottom: 30px;
         }
         >div {
-            margin-bottom: 40px;
+            margin-bottom: 0px;
         }
 	}
 }
@@ -252,13 +252,13 @@
       max-height: 400px;
     }
     @media #{$large-and-up} {
-      max-height: 65vh;
+      max-height: 75vh;
     }
   }
   
   .submit-bar {
     text-align: right;
-    position: fixed;
+    // position: fixed;
     // right: 192px;
     // bottom: -70px;
     font-family: $nav-type;
@@ -515,18 +515,6 @@
     display: none;
   }
   
-  #reset-location {
-    display: block;
-    top: 70px;
-    left: 15px;
-    font-family: $nav-type;
-    z-index: 1;
-  }
-  
-  #reset-location.hidden-reset-loc {
-    display: none;
-  }
-  
   #no-results {
     display: none;
   }
@@ -583,16 +571,17 @@ input.chk-btn:checked + label {
 		margin: 0px 10px 10px 0;
     	overflow:auto;
     	float:left;
-		background-color: rgba(30,177,242, .3);
+		background-color: rgba(250,250,250, .3);
 		color: rgba(250,250,250, 1);
 		border-radius: 18px;
 		padding: 8px 12px;
-		border: 1px solid rgba(30,177,242, 1);
+        border: 1px solid rgba(30,177,242, 1);
+        font-size: 14px;
 		&:not(:checked) {
 			// background-color: rgba(30,177,242, 1);
 			background: rgba(255,255,255, 0);
-			border: 1px solid rgba(30,177,242, 0.7);
-			color: rgba(30,177,242, 0.7);
+			border: 1px solid rgba(250,250,250, 0.7);
+			color: rgba(250,250,250, 0.7);
 		}
 		&:hover, &:active {
 			background-color: rgba(30,177,242, 1);
