--- a/src/styles/components/map.scss
+++ b/src/styles/components/map.scss
@@ -6,6 +6,11 @@
     transition: all 0.5s ease;
     width: 0%;
     display: inline-block;
+    height: 0;
+    overflow: hidden;
+    position: relative;
+    background: $white;
+    z-index: 40;
 }
 
 .map-container.list-open {
@@ -13,15 +18,18 @@
         display: inline-block;
         width: 100%;
         min-height: 80vh;
+        max-height: 80vh;
+        overflow-y: scroll;
         background: $white;
         vertical-align: top;
         @media #{$medium-and-up} {
-            width: 38%;
+            width: 99.5%;
         }
     }
     #grants-map {
         @media #{$medium-and-up} {
-            width: 60%;
+            width: 39.5%;
+            width: 0%;
         }
     }
     #pac-input {
@@ -116,7 +124,7 @@
 	color: #666666;
 	padding: .8em;
 	@media #{$medium-and-up} {
-		width: 600px;
+		width: 400px;
 		margin-left: 12px;
 		margin-top: 20px;
 		// font-size: 30px;
@@ -173,4 +181,44 @@ button, .button {
 
 #reset-location.hidden-reset-loc {
     display: none;
+}
+
+.map-list-container {
+    @media #{$medium-and-up} {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        > div {
+            width: 47%;
+            width: 24%;
+        }
+	}
+}
+
+.single-list-item {
+    h5 {
+        font-size: 20px;
+        line-height: 1.3;
+        margin: 0;
+        margin: 8px 0;
+    }
+}
+
+.single-list-item-container {
+    padding: 24px;
+    p {
+        margin: 0;
+        font-size: 14px;
+    }
+}
+
+.single-list-item__image {
+    height: 150px;
+    width: 100%;
+    img {
+        object-fit: cover;
+        display: block;
+        width: 100%;
+        height: 100%;
+    }
 }
