--- a/src/styles/components/map.scss
+++ b/src/styles/components/map.scss
@@ -187,7 +187,7 @@ button, .button {
     @media #{$medium-and-up} {
         display: flex;
         flex-wrap: wrap;
-        justify-content: space-between;
+        // justify-content: space-between;
         > div {
             width: 47%;
             width: 24%;
