--- a/src/styles/components/nav.scss
+++ b/src/styles/components/nav.scss
@@ -2,6 +2,11 @@
     background-color: #067f1b;
 }
 
+nav {
+    position: relative;
+    z-index: 100000;
+}
+
 nav#scrolling {
     @media #{$medium-and-down} {
 		// display: block;
