--- a/src/styles/views/home.scss
+++ b/src/styles/views/home.scss
@@ -28,15 +28,28 @@
 	}
 }
 
+.event-templates {
+	padding: 0 24px;
+	@media #{$medium-and-up} {
+		padding: 0;
+	}
+}
+
 .event-templates,
 .grant-recipients {
 	h3 {
 		color: $green;
 		text-align: center;
-		font-size: 40px;
+		font-size: 24px;
+		@media #{$medium-and-up} {
+			font-size: 40px;
+		}
 	}
 	h4 {
 		font-size: 30px;
+		@media #{$small-and-down} {
+			font-size: 20px;
+		}
 	}
 	max-width: 960px;
 	margin: 0 auto;
@@ -47,6 +60,11 @@
 }
 
 .three-column {
+	@media #{$small-and-down} {
+		> div {
+			padding: 20px 0;
+		}
+	}
 	@media #{$large-and-up} {
 		display: flex;
 		justify-content: space-between;
@@ -56,6 +74,7 @@
 			width: 30%;
 		}
 	}
+	
 	a {
 		display: inline-block;
 		border-radius: 50px;
@@ -218,9 +237,13 @@ h1 {
 	border:4px solid $orange;
 	padding: 16px 40px;
 	border-radius: 50px;
-	font-size: 32px;
+	font-size: 16px;
 	margin: 32px 0;
 	font-weight: bold;
+	@media #{$medium-and-up} {
+		padding: 16px 40px;
+		font-size: 32px;
+	}
 	&:hover {
 		background-color: $white;
 		color: $orange;
@@ -240,7 +263,11 @@ h1 {
 	text-align: center;
 	font-size: 0.8rem;
 	line-height: 1.5;
-	margin-top: 40px;
+	margin-top: 100px;
+	@media #{$medium-and-up} {
+		margin-top: 40px;
+		font-size: 0.8rem;
+	}
 	p {
 		font-size: 0.8rem;
 		line-height: 1.5;
@@ -317,7 +344,7 @@ h1 {
 
 .grant-illustration {
 	position: relative;
-	margin-top: -50px;
+	margin-top: 0px;
 	z-index: 100;
 	padding-bottom: 15%;
 	min-height: 300px;
@@ -331,7 +358,7 @@ h1 {
 	.main-animation {
 		position: absolute;
 		left: 0;
-		top: 130px;
+		top: 50px;
 		z-index: 20;
 		@media #{$medium-and-up} {
 			top: 5%;
@@ -405,8 +432,6 @@ h1 {
 		}
 	}
 }
-
-
 
 .recipients {
     padding-bottom: 80px;
