--- a/src/styles/components/map.scss
+++ b/src/styles/components/map.scss
@@ -99,7 +99,7 @@
 	@media #{$small-and-down} {
 		width: 90%;
 		margin-left: 5%;
-		margin-top: 5%;
+		margin-top: 40%;
 	}
 }   
 
@@ -123,7 +123,7 @@
 	@media #{$small-and-down} {
 		width: 90%;
 		margin-left: 5%;
-		margin-top: 5%;
+		margin-top: 120px;
 	}
 }
 
