--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -33,4 +33,5 @@ $xlarge-and-up: "only screen and (min-width : #{$large-screen-up})" !default;
 $xxlarge-and-up: "only screen and (min-width : #{$xxlarge-screen-up})" !default;
 $small-and-down: "only screen and (max-width : #{$small-screen})" !default;
 $medium-and-down: "only screen and (max-width : #{$medium-screen})" !default;
+$large-and-down: "only screen and (max-width : #{$large-screen})" !default;
 $medium-only: "only screen and (min-width : #{$small-screen-up}) and (max-width : #{$medium-screen})" !default;
