--- a/src/styles/views/home.scss
+++ b/src/styles/views/home.scss
@@ -139,7 +139,10 @@ h1 {
 
 .container {
     max-width: 800px;
-    margin: 0 auto;
+	margin: 0 auto;
+	@media #{$medium-and-down} {
+		padding: 0 20px;
+    }
 }
 
 .loading-panel {
@@ -152,7 +155,10 @@ h1 {
 
 .wide-container {
     max-width: 1160px;
-    margin: 0 auto;
+	margin: 0 auto;
+	@media #{$medium-and-down} {
+		padding: 0 20px;
+    }
 }
 
 .skewed-bg{
