--- a/src/styles/views/home.scss
+++ b/src/styles/views/home.scss
@@ -236,16 +236,16 @@ h1 {
 }
 
 // video transition styles
-.fade-enter {
-  	opacity: 0;
-	transform: translateX(50px);
+.slide-fade-enter-active {
+  transition: all .3s ease;
 }
-.fade-leave-to {
-
+.slide-fade-leave-active {
+  transition: all .8s cubic-bezier(1.0, 0.5, 0.8, 1.0);
 }
-
-.fade-enter-active{
-  transition: 0.5s;
+.slide-fade-enter, .slide-fade-leave-to
+/* .slide-fade-leave-active below version 2.1.8 */ {
+  transform: translateX(10px);
+  opacity: 0;
 }
 
 .application-eligibility {
