--- a/src/styles/views/home.scss
+++ b/src/styles/views/home.scss
@@ -202,7 +202,13 @@ h1 {
 		width: 100%;
 		height: 500px;
 		background: black;
+		position: relative;
+    padding-bottom: 56.25%;
+    overflow: hidden;
 		iframe {
+			position: absolute;
+			top: 0;
+			left: 0;
 			width: 100%;
 			height: 100%;
 		}
