--- a/src/styles/views/home.scss
+++ b/src/styles/views/home.scss
@@ -198,6 +198,20 @@ h1 {
 			margin-bottom: 25px;
 		}
 	}
+
+	.overlay{
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		z-index: 10;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		background: rgba(0,0,0,0.5);
+	}
+
 	.hero {
 		width: 100%;
 		height: 500px;
