--- a/src/styles/views/home.scss
+++ b/src/styles/views/home.scss
@@ -185,6 +185,9 @@ h1 {
 .videos {
 	// padding: 50px 0;
 
+	position: relative;
+	overflow: hidden;
+
 	h2 {
 		color: #B9C050;
 		font-size: 35px;
@@ -204,7 +207,7 @@ h1 {
 		top: 0;
 		left: 0;
 		width: 100%;
-		height: inherit;
+		height: 56.25vw;
 		z-index: 10;
 		display: flex;
 		align-items: center;
