--- a/src/styles/views/home.scss
+++ b/src/styles/views/home.scss
@@ -213,6 +213,9 @@ h1 {
 		align-items: center;
 		justify-content: center;
 		background: rgba(0,0,0,0.5);
+		h1{
+			color: #B9C050;
+		}
 	}
 
 	.hero {
