--- a/src/styles/views/home.scss
+++ b/src/styles/views/home.scss
@@ -210,6 +210,7 @@ h1 {
 		height: 56.25vw;
 		z-index: 10;
 		display: flex;
+		flex-direction: column;
 		align-items: center;
 		justify-content: center;
 		background: rgba(0,0,0,0.5);
