--- a/src/styles/views/home.scss
+++ b/src/styles/views/home.scss
@@ -182,6 +182,15 @@ h1 {
     }
 }
 
+@keyframes fadeout {
+	0%{
+		opacity: 1;
+	}
+	100%{
+		opacity: 0;
+	}
+}
+
 .videos {
 	// padding: 50px 0;
 
@@ -214,6 +223,7 @@ h1 {
 		align-items: center;
 		justify-content: center;
 		background: rgba(0,0,0,0.5);
+		animation: 1s ease 10s 1 running fadeout;
 		h1{
 			color: #B9C050;
 		}
