--- a/src/styles/views/home.scss
+++ b/src/styles/views/home.scss
@@ -221,7 +221,7 @@ h1 {
 		display: flex;
 		flex-direction: column;
 		align-items: center;
-		justify-content: center;
+		justify-content: flex-end;
 		background: rgba(0,0,0,0.5);
 		transition: opacity 0.5s ease;
 		opacity: 0;
@@ -230,7 +230,15 @@ h1 {
 		} 
 		// animation: 1s ease 10s 1 running fadeout;
 		h1{
+			max-width: 600px;
+			margin-right: 50px;
+			margin-left: 50px;
+			font-size: 30px;
 			color: #B9C050;
+		}
+		.cta_button{
+			font-size: 16px;
+			padding: 8px 20px;
 		}
 	}
 
