--- a/src/styles/views/home.scss
+++ b/src/styles/views/home.scss
@@ -230,11 +230,12 @@ h1 {
 		} 
 		// animation: 1s ease 10s 1 running fadeout;
 		h1{
-			max-width: 600px;
+			max-width: 500px;
 			margin-right: 50px;
 			margin-left: 50px;
 			font-size: 30px;
 			color: #B9C050;
+			text-align: center;
 		}
 		.cta_button{
 			font-size: 16px;
