--- a/src/styles/views/home.scss
+++ b/src/styles/views/home.scss
@@ -247,7 +247,7 @@ h1 {
 
 	.hero {
 		width: 100%;
-		height: 500px;
+		// height: 500px;
 		background: black;
 		position: relative;
     padding-bottom: 56.25%;
