--- a/src/styles/views/home.scss
+++ b/src/styles/views/home.scss
@@ -234,14 +234,14 @@ h1 {
 			max-width: 500px;
 			margin-right: 50px;
 			margin-left: 50px;
-			font-size: 30px;
+			// font-size: 30px;
 			color: #B9C050;
 			text-align: center;
 		}
 		.cta_button{
-			font-size: 16px;
-			padding: 8px 20px;
-			margin-bottom: 0;
+			// font-size: 16px;
+			// padding: 8px 20px;
+			// margin-bottom: 0;
 		}
 	}
 
