--- a/src/styles/views/home.scss
+++ b/src/styles/views/home.scss
@@ -221,7 +221,7 @@ h1 {
 		display: flex;
 		flex-direction: column;
 		align-items: center;
-		justify-content: flex-end;
+		justify-content: center;
 		background: rgba(0,0,0,0.5);
 		transition: opacity 0.5s ease;
 		opacity: 0;
