--- a/src/styles/views/home.scss
+++ b/src/styles/views/home.scss
@@ -182,6 +182,123 @@ h1 {
     }
 }
 
+.videos {
+	// padding: 50px 0;
+
+	position: relative;
+	overflow: hidden;
+
+	h2 {
+		color: #B9C050;
+		font-size: 35px;
+		text-align: center;
+		margin-bottom: 50px;
+		@media #{$medium-and-down} {
+			font-size: 30px;
+		}
+		@media #{$small-and-down} {
+			font-size: 25px;
+			margin-bottom: 25px;
+		}
+	}
+
+	.overlay{
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 56.25vw;
+		z-index: 10;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+		background: rgba(0,0,0,0.5);
+		transition: opacity 0.5s ease;
+		opacity: 0;
+		padding-bottom: 10vw;
+		&:hover{
+			opacity: 1;
+		} 
+		// animation: 1s ease 10s 1 running fadeout;
+		h1{
+			max-width: 700px;
+			margin-right: 50px;
+			margin-left: 50px;
+			// font-size: 30px;
+			color: #B9C050;
+			text-align: center;
+		}
+		.cta_button{
+			// font-size: 16px;
+			// padding: 8px 20px;
+			// margin-bottom: 0;
+		}
+	}
+
+	.hero {
+		width: 100%;
+		// height: 500px;
+		background: black;
+		position: relative;
+    padding-bottom: 56.25%;
+    overflow: hidden;
+		iframe {
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+		}
+	}
+	.selection {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+
+	}
+	.thumbnail-button {
+		margin: 40px 20px;
+		width: 300px;
+		position: relative;
+		height: 168px;
+		border: none;
+		background-size: contain;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+
+
+		img {
+			width: 40px;
+			transition: filter 0.1s, width 0.1s;
+			filter: saturate(0%) brightness(150%);
+		}
+		&:hover {
+			img {
+				width: 55px;
+				fill: #000;
+				filter: none;
+			}
+		}
+	}
+}
+// video-thumbnail transition styles
+.slide-fade-enter-active {
+  transition: all .3s cubic-bezier(1.0, 0.5, 0.8, 1.0);
+}
+.slide-fade-leave-active {
+
+transition: none;
+//   transition: all .1s cubic-bezier(1.0, 0.5, 0.8, 1.0);
+}
+.slide-fade-enter, .slide-fade-leave-to
+/* .slide-fade-leave-active below version 2.1.8 */ {
+  transform: translateX(10px);
+  position: absolute;
+  opacity: 0;
+}
+
 .application-eligibility {
 	position: relative;
 	z-index: 500;
